--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -77,7 +77,7 @@ features. Our decorrelation procedure relies on a gradient-based algorithm that
 is more numerically stable than standard decomposition-based procedures, and we
 efficiently search for candidate detections by computing FFT-based template
 convolutions. Due to the speed of our template synthesis procedure, we are able
-to perform joint optimization on continuous scale, translation, rotation, and
+to perform joint optimization on scale, translation, continuous rotation, and
 focal length. We provide an efficient GPU implementation of our algorithm, and
 we validate its performance on 3D Object Classes and PASCAL3D+ datasets.
 
