--- a/egpaper_supp.tex
+++ b/egpaper_supp.tex
@@ -11,6 +11,7 @@
 \usepackage{subcaption}
 \usepackage{algorithm2e}
 \usepackage{rotating}
+
 \usepackage[space]{grffile}
 \usepackage[font=small,skip=0pt]{caption}
 %\DeclareMathOperator{\Tr}{Tr}
@@ -65,12 +66,13 @@ Estimation''.
 
 \section{3D Object Dataset}
 \label{sect:3dobject}
-We run our ensemble of NZ-WHO templates as a detector on 3D Object
-dataset\cite{savarese07} without tuning and present detection average precision, average
-viewpoint precision, viewpoint confusion matrix and mean precision in pose
-estimation. See Fig.~\ref{fig:3dobject_ap}
 
-Most of the error in viewpoint estimation come from frontal and back views
+It this section, we provide qualitative examples and plots for the experiment
+``2D-3D Matching as an Object Detector''. To recapitulate, we run our ensemble
+of NZ-WHO templates as an ensemble of exemplar templates on 3D Object
+dataset\cite{savarese07} without fine-tuning stage. The detection average
+precision, average viewpoint precision, viewpoint confusion matrix and mean
+precision in pose estimation results are on Fig.~\ref{fig:3dobject_ap}
 
 \begin{figure}[h]
   \centering
@@ -81,16 +83,21 @@ Most of the error in viewpoint estimation come from frontal and back views
   \vspace{-5pt}
     (b) Bicycle\\
   \caption{Detection and pose estimation on 3D Object dataset car category (top) and bicycle category (bottom).
-  Average Precision (red) and Average Viewpoint Precision (green) (left)
-  Viewpoint confusion table and MPPE (right), Viewpoint index 1 is front, index 2 is
-  front-right, \dots index 8 is front-left. }
+  Average Precision (red) and Average Viewpoint Precision (green) are overlaid on the left plot and
+  viewpoint confusion table and MPPE are on the right plot. The viewpoint index 1 is front, index 2 is
+  front-right, \dots index 8 is front-left.}
   \label{fig:3dobject_ap}
 \end{figure}
 
-We put successful car detection results on Fig.~\ref{fig:3dobject_car_good} and
+For qualitative results, we put successful car viewpoint prediction results on
+Fig.~\ref{fig:3dobject_car_good} and
 failure cases on Fig.~\ref{fig:3dobject_car_bad}. And for bicycle, successful
-bicycle detection results are on Fig.~\ref{fig:3dobject_bicycle_good} and
-failure cases on Fig.~\ref{fig:3dobject_bicycle_bad}.
+results are on Fig.~\ref{fig:3dobject_bicycle_good} and
+failure cases on Fig.~\ref{fig:3dobject_bicycle_bad}. We followed detection
+and viewpoint estimation criteria of \cite{Xiang12} where detection is correct
+iff intersection over union of more than 0.5 and viewpoint estimation is
+correct iff detection is correct \emph{and} azimuth of the viewpoint
+prediction falls in to the correct viewpoint bin.
 
 \begin{figure*}[h]
 \setlength\tabcolsep{1pt}
@@ -105,12 +112,11 @@ failure cases on Fig.~\ref{fig:3dobject_bicycle_bad}.
   \includegraphics[width=0.40\linewidth]{supp/car8.png} \\
   \includegraphics[width=0.40\linewidth]{supp/car20.png} & 
   \includegraphics[width=0.40\linewidth]{supp/car31.png} \\
-%   \includegraphics[width=0.40\linewidth]{supp/car33.png} & 
   \hline
   \end{tabular}
-\caption{Successful detection results on 3D Object dataset car
-category. In each column, original image (left) and detection result overlaid on
-top (right).}% with a bounding box and corresponding confidence score (right).}
+\caption{Successful detection results on 3D Object dataset, car
+category. In each column, original image is on the left and detection result overlaid on
+the right.}% with a bounding box and corresponding confidence score (right).}
   \label{fig:3dobject_car_good}
 \end{figure*}
 
@@ -129,12 +135,11 @@ top (right).}% with a bounding box and corresponding confidence score (right).}
   \includegraphics[width=0.40\linewidth]{supp/bicycle10.png} \\
   \hline
   \end{tabular}
-\caption{Successful detection results on 3D Object dataset car
-classes. In each column, original image (left) and detection result overlaid on
-top (right).}% with a bounding box and corresponding confidence score (right).}
+\caption{Successful detection results on 3D Object dataset, bicycle
+category. In each column, original image is on the left and detection result overlaid on
+the right).}% with a bounding box and corresponding confidence score (right).}
   \label{fig:3dobject_bicycle_good}
 \end{figure*}
-
 
 \begin{figure*}[h]
 \setlength\tabcolsep{1pt}
@@ -147,9 +152,9 @@ top (right).}% with a bounding box and corresponding confidence score (right).}
   \includegraphics[width=0.40\linewidth]{supp/car25.png} \\
   \hline
   \end{tabular}
-\caption{Failed pose estimation results on 3D Object dataset car and bike
-classes. In each column, original image (left) and detection result overlaid on
-top (right).}% with a bounding box and corresponding confidence score (right).}
+\caption{Failed detection or pose estimation results on 3D Object dataset, car
+category. In each column, original image is on the left and detection result overlaid
+on the right.}% with a bounding box and corresponding confidence score (right).}
   \label{fig:3dobject_car_bad}
 \end{figure*}
 
@@ -164,22 +169,69 @@ top (right).}% with a bounding box and corresponding confidence score (right).}
   \includegraphics[width=0.40\linewidth]{supp/bicycle20.png} \\
 \hline
 \end{tabular}
-\caption{Failed pose estimation results on 3D Object dataset car and bike
-classes. In each column, original image (left) and detection result overlaid on
-top (right).}% with a bounding box and corresponding confidence score (right).}
+\caption{Failed detection or pose estimation results on 3D Object dataset, bicycle
+category. In each column, original image is on the left and detection result overlaid on
+the right.}% with a bounding box and corresponding confidence score (right).}
   \label{fig:3dobject_bicycle_bad}
 \end{figure*}
 
-
-
 \section{PASCAL3D+}
 
-We run our ensemble of NZ-WHO templates as a detector on car
-and bicycle classes in PASCAL3D+ dataset  \cite{Xiang14} and present detection average precision,
-average viewpoint precision, viewpoint confusion matrix and mean precision in
-pose estimation. See Fig.~\ref{fig:3dobject_ap}
+It this section, we provide qualitative examples and plots for the experiment
+``Enriching Existing Detection''. To recapitulate, we used object detection
+bounding boxes from state-of-the-art detectors \cite{Girshick14, Pepik12} and
+enrich bounding boxes with 2D-3D registration and continuous viewpoint
+estimation. We present detection average precision, average viewpoint
+precision, viewpoint confusion matrix and mean precision in pose estimation
+results on Fig.~\ref{fig:pascal_ap}. 
 
-For each of the proposal bounding box, we assumed that there is only one object and the object 
+We followed the evaluation criteria of \cite{Xiang14} for detection and
+viewpoint estimation.
+
+In this experiment, we used R-CNN\cite{Girshick14} for detection bounding box
+proposals and our system produces accurate 2D-3D matching on the proposal
+regions. We used $15\%$ context (extend the proposal region by $15\%$ on the
+top, right, left and bottom). We run our pipeline on PASCAL3D+
+dataset\cite{Xiang14} with fine-tuning stage. 
+
+If our method fails to estimate viewpoint (confidence score is below 45), it
+estimates 0 azimuth, 0 elevation, 0 yaw. Note that for all categories and
+different number of viewpoints, our method has difficulty discerning frontal
+view and back view.
+
+
+\begin{figure*}[h]
+  \centering
+  \begin{tabular}{cc}
+  \includegraphics[width=0.45\linewidth]{car_cnn4_crop.png}&
+  \includegraphics[width=0.45\linewidth]{car_cnn8_crop.png}\\
+    (a) Car, 4 views&
+    (b) Car, 8 views\\
+  \includegraphics[width=0.45\linewidth]{car_cnn16_crop.png}&
+  \includegraphics[width=0.45\linewidth]{car_cnn24_crop.png}\\
+    (c) Car, 16 views&
+    (d) Car, 24 views\\
+  \includegraphics[width=0.45\linewidth]{supp/bicycle_cnn4_crop.png}&
+  \includegraphics[width=0.45\linewidth]{supp/bicycle_cnn8_crop.png}\\
+    (e) Bicycle, 4 views&
+    (j) Bicycle, 8 views\\  
+  \includegraphics[width=0.45\linewidth]{supp/bicycle_cnn16_crop.png}&
+  \includegraphics[width=0.45\linewidth]{supp/bicycle_cnn24_crop.png}\\
+    (g) Bicycle, 16 views&
+    (h) Bicycle, 24 views\\
+  \end{tabular}
+  \caption{Detection and pose estimation on PASCAL3D+ dataset. On the left, we
+  present average precision curve (red) average viewpoint precision curve
+  (green). On the right, we present confusion matrix and mean precision in pose
+  estimation. Viewpoint index 1 is front, index 2 is front-right \dots and
+  $n-1$ is front-left for number of viewpoints $n$.}
+  \label{fig:pascal_ap}
+\end{figure*}
+
+
+We put qualitative results on Fig.~\ref{fig:pascal3d_car_good} to
+Fig.~\ref{fig:pascal3d_bicycle_bad}. 
+
 \begin{figure*}[h]
 \setlength\tabcolsep{1pt}
 \centering
@@ -215,9 +267,13 @@ For each of the proposal bounding box, we assumed that there is only one object 
   \includegraphics[width=0.24\linewidth]{supp/pas_car18d.png} \\
   \hline
   \end{tabular}
-\caption{Successful detection result on PASCAL3D+ dataset car class, First tow columns are the original images and second column detection result overlaid on top. }
+  \caption{Successful detection and pose estimation result on PASCAL3D+ dataset
+  car category, On each column, original image is on the left and overlaid
+  2D-3D registration on the right with a proposal bounding box (blue) and a
+  predicted bounding box (purple).} 
   \label{fig:pascal3d_car_good}
 \end{figure*}
+
 
 \begin{figure*}[h]
 \setlength\tabcolsep{1pt}
@@ -250,10 +306,12 @@ For each of the proposal bounding box, we assumed that there is only one object 
   \includegraphics[width=0.22\linewidth]{supp/pas_bicycle12b.png}  \\
   \hline
   \end{tabular}
-\caption{Successful detection result on PASCAL3D+ dataset car class, First tow columns are the original images and second column detection result overlaid on top. }
+\caption{Successful detection and pose estimation result on PASCAL3D+ dataset
+  bicycle category, On each column, original image is on the left and overlaid
+  2D-3D registration on the right with a proposal bounding box (blue) and a
+  predicted bounding box (purple).} 
   \label{fig:pascal3d_bicycle_good}
 \end{figure*}
-
 
 
 \begin{figure*}[h]
@@ -283,7 +341,10 @@ For each of the proposal bounding box, we assumed that there is only one object 
   \includegraphics[width=0.22\linewidth]{supp/pas_car23b.png} \\
   \hline
   \end{tabular}
-\caption{Detection failure results on PASCAL3D+ dataset car class}% with a bounding box and corresponding confidence score (right).}
+\caption{Failed detection or pose estimation result on PASCAL3D+ dataset
+  car category, On each column, original image is on the left and overlaid
+  2D-3D registration on the right with a proposal bounding box (blue) and a
+  predicted bounding box (purple).} 
   \label{fig:pascal3d_car_bad}
 \end{figure*}
 
@@ -306,8 +367,49 @@ For each of the proposal bounding box, we assumed that there is only one object 
   \includegraphics[width=0.22\linewidth]{supp/pas_bicycle19a.png}  &
   \includegraphics[width=0.22\linewidth]{supp/pas_bicycle19b.png}  \\   \hline
   \end{tabular}
-\caption{Detection Result on PASCAL3D+ dataset car class}% with a bounding box and corresponding confidence score (right).}
+\caption{Failed detection or pose estimation result on PASCAL3D+ dataset
+  bicycle category, On each column, original image is on the left and overlaid
+  2D-3D registration on the right with a proposal bounding box (blue) and a
+  predicted bounding box (purple).} 
   \label{fig:pascal3d_bicycle_bad}
+\end{figure*}
+
+
+\section{Fine Tuning}
+
+In this section, we give qualitative examples of before and after the
+fine-tuning stage on Fig.~\ref{tuning}.
+
+See section ``Pose Fine-Tuning via MCMC'' for more detail.
+
+
+\begin{figure*}[h]
+\setlength\tabcolsep{1pt}
+\centering
+\begin{tabular}{ccc}
+  \includegraphics[width=0.22\linewidth]{supp/tuning_1a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_1b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_1c.png}  \\
+  \includegraphics[width=0.22\linewidth]{supp/tuning_2a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_2b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_2c.png}  \\ 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_3a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_3b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_3c.png}  \\   
+  \includegraphics[width=0.22\linewidth]{supp/tuning_4a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_4b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_4c.png}  \\     
+  \includegraphics[width=0.22\linewidth]{supp/tuning_5a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_5b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_5c.png}  \\
+  \includegraphics[width=0.22\linewidth]{supp/tuning_6a.png} &
+  \includegraphics[width=0.22\linewidth]{supp/tuning_6b.png} & 
+  \includegraphics[width=0.22\linewidth]{supp/tuning_6c.png}  \\
+  \end{tabular}
+\caption{From left to right, original images, initial pose estimations and
+fine-tuned result. The numbers, from the left, indicate detection confidence
+and intersection over union respectively.} 
+  \label{fig:tuning}
 \end{figure*}
 
 
